[gd_scene load_steps=8 format=3 uid="uid://b5teofxfbmeqg"]

[ext_resource type="Script" path="res://scripts/displayed_manual.gd" id="1_udpjq"]
[ext_resource type="Texture2D" uid="uid://cr5ydqwomcukr" path="res://assets/objects/cruz.png" id="2_1fay5"]
[ext_resource type="Texture2D" uid="uid://certid8pw5qlp" path="res://assets/objects/flecha.png" id="2_xuha4"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7a7rj"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_o8jnr"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8y26r"]

[sub_resource type="SpriteFrames" id="SpriteFrames_w3ydf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_7a7rj")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_o8jnr")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_8y26r")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="displayed_manual" type="Node2D"]
script = ExtResource("1_udpjq")

[node name="full_manual" type="AnimatedSprite2D" parent="."]
position = Vector2(169, 85)
sprite_frames = SubResource("SpriteFrames_w3ydf")

[node name="close" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 239.0
offset_top = 33.0
offset_right = 257.0
offset_bottom = 51.0

[node name="close_sprite" type="Sprite2D" parent="close"]
position = Vector2(9, 9)
texture = ExtResource("2_1fay5")

[node name="pass_page" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 243.0
offset_top = 133.0
offset_right = 267.0
offset_bottom = 150.0

[node name="pass_sprite" type="Sprite2D" parent="pass_page"]
position = Vector2(11, 8)
texture = ExtResource("2_xuha4")

[node name="back_page" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 55.0
offset_top = 118.0
offset_right = 80.0
offset_bottom = 135.0
rotation = 3.14022
scale = Vector2(0.999996, 0.995032)
pivot_offset = Vector2(20, 15)

[node name="back_page_sprite" type="Sprite2D" parent="back_page"]
position = Vector2(11.0082, 8.95763)
texture = ExtResource("2_xuha4")

[connection signal="mouse_entered" from="close" to="." method="_on_close_mouse_entered"]
[connection signal="mouse_exited" from="close" to="." method="_on_close_mouse_exited"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="mouse_entered" from="pass_page" to="." method="_on_pass_page_mouse_entered"]
[connection signal="mouse_exited" from="pass_page" to="." method="_on_pass_page_mouse_exited"]
[connection signal="pressed" from="pass_page" to="." method="_on_pass_page_pressed"]
[connection signal="mouse_entered" from="back_page" to="." method="_on_back_page_mouse_entered"]
[connection signal="mouse_exited" from="back_page" to="." method="_on_back_page_mouse_exited"]
[connection signal="pressed" from="back_page" to="." method="_on_back_page_pressed"]
